src/objects/Language_Pair__c.object
<CustomObject>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Char_Price__c</fullName>
        <label>Char Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Express_Multiplier__c</fullName>
        <label>Express Multiplier</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGR</fullName>
                </value>
                <value>
                    <fullName>BIZT</fullName>
                </value>
                <value>
                    <fullName>ELEKTR</fullName>
                </value>
                <value>
                    <fullName>ÉLELM</fullName>
                </value>
                <value>
                    <fullName>ENERG</fullName>
                </value>
                <value>
                    <fullName>ÉPIP</fullName>
                </value>
                <value>
                    <fullName>EÜ</fullName>
                </value>
                <value>
                    <fullName>PÜ</fullName>
                </value>
                <value>
                    <fullName>GAZD</fullName>
                </value>
                <value>
                    <fullName>GÉPIP</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JOG</fullName>
                </value>
                <value>
                    <fullName>KÖRNY</fullName>
                </value>
                <value>
                    <fullName>KÖZL</fullName>
                </value>
                <value>
                    <fullName>KULT</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SZÁLL</fullName>
                </value>
                <value>
                    <fullName>OKIRAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fluency_Level__c</fullName>
        <label>Fluency Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C1 Certified</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C2 Certified</fullName>
                </value>
                <value>
                    <fullName>C2 Native</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipName>Language_Pairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proofreading_Multiplier__c</fullName>
        <label>Proofreading Multiplier</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Char_Price__c</fullName>
        <label>@DEPR Source Char Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Word_Price__c</fullName>
        <label>@DEPR Source Word Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Char_Price__c</fullName>
        <label>@DEPR Target Char Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Word_Price__c</fullName>
        <label>@DEPR Target Word Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipName>Language_Pairs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Translator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Translator</label>
        <referenceTo>Translator__c</referenceTo>
        <relationshipName>Language_Pairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Urgent_Multiplier__c</fullName>
        <label>Urgent Multiplier</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Word_Price__c</fullName>
        <label>Word Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Nyelvpár</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>Translator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Language Pair Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Language Pairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>